[gd_scene load_steps=4 format=3 uid="uid://bn5aophyrjml8"]

[ext_resource type="Script" path="res://scripts/UI/PauseMenu.gd" id="1_r2oi1"]
[ext_resource type="Theme" uid="uid://dqsdviqloysom" path="res://theme/ui_theme.tres" id="2_l1324"]
[ext_resource type="PackedScene" uid="uid://qionmpjigwp8" path="res://scenes/UI/UIButton.tscn" id="2_yy17c"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_r2oi1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(100, 85)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PauseMenuLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 13)
layout_mode = 2
theme = ExtResource("2_l1324")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[center]Game paused[center]"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ResumeButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_yy17c")]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_yy17c")]
layout_mode = 2
text = "Options"

[node name="MainMenuButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_yy17c")]
layout_mode = 2
text = "Main menu"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
